--- a/config.json
+++ b/config.json
@@ -10,10 +10,12 @@
   "text": {
     "more": "Les informations sont retrouvables dans des articles de presse officiels (dont la plupart servent de source à wikipedia) ou sur les sites officiels\ndes structures.\nLes profils linkedin et twitter des personnes présentes ici ont beaucoup contribué à ces recherches.\n\nLa nature des liens qui unissent les gens et les différentes organisations n\u0027est pour le moment pas affichée.\nDes recherches sont en cours pour les faire apparaitre.\n\nLes couleurs des noeuds changeront selon le type qui leur sera attribué à l\u0027avenir.\n\nToutes les données utilisées sont publiques.",
     "intro": "Diagramme des relations entre personnalités et structures.",
-    "title": "Complof"
+    "title": "Qui et qui ?"
   },
   "legend": {
-    
+    "edgeLabel": "Liens qui unissent ces personnes",
+    "colorLabel": "None",
+    "nodeLabel": "Noms des personnes/structures"
   },
   "features": {
     "search": true,
@@ -26,7 +28,7 @@
   },
   "sigma": {
     "drawingProperties": {
-      "defaultEdgeType": "line",
+      "defaultEdgeType": "curve",
       "defaultHoverLabelBGColor": "#002147",
       "defaultLabelBGColor": "#ddd",
       "activeFontStyle": "bold",
