--- a/config.json
+++ b/config.json
@@ -8,7 +8,7 @@
     "text": "Osefmegrav"
   },
   "text": {
-    "more": "Les informations sont retrouvables dans des articles de presse officiels (dont la plupart servent de source à wikipedia) ou sur les sites officiels\ndes structures.\nLes profils linkedin et twitter des personnes présentes ici ont beaucoup contribué à ces recherches.\n\nLa nature des liens qui unissent les gens et les différentes organisations n\u0027est pour le moment pas affichée.\nDes recherches sont en cours pour les faire apparaitre.\n\nLes couleurs des noeuds changeront selon le type qui leur sera attribué à l\u0027avenir.\n\nToutes les données utilisées sont publiques.\n\n(merci au travail de la Horde et de la C.A.R.T.E)",
+    "more": "Les informations sont retrouvables dans des articles de presse officiels (dont la plupart servent de source à wikipedia) ou sur les sites officiels\ndes structures.\n\nLa nature des liens qui unissent les gens et les différentes organisations n\u0027est pour le moment pas affichée.\nDes recherches sont en cours pour les faire apparaitre.\n\nToutes les données utilisées sont publiques.\n\n(merci au travail de la Horde et de la C.A.R.T.E)\n\nSi vous trouvez des erreurs ou si vous avez des informations à ajouter (avec source), vous pouvez me les signaler via l\u0027adresse jamaisassezloin[at]free.fr",
     "intro": "Diagramme des relations entre personnalités et structures.",
     "title": "Qui et qui ?"
   },
@@ -37,13 +37,13 @@
       "defaultLabelHoverColor": "#fff",
       "fontStyle": "bold",
       "hoverFontStyle": "bold",
-      "defaultLabelSize": 0
+      "defaultLabelSize": 14
     },
     "graphProperties": {
-      "maxEdgeSize": 2,
+      "maxEdgeSize": 0.5,
       "minEdgeSize": 0.2,
       "minNodeSize": 1,
-      "maxNodeSize": 40
+      "maxNodeSize": 7
     },
     "mouseProperties": {
       "maxRatio": 20,
